crates/analyzer/tests/snapshots/errors__call_balance_of_without_parameter.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `balance_of` expects 1 argument, but 0 were provided
  ┌─ [snippet]:3:3
  │
3 │   balance_of()
  │   ^^^^^^^^^^-- supplied 0 arguments
  │   │          
  │   expects 1 argument


